<resources>
    <string name="app_name">DoctorsNotebook</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="add_patient_date">Date</string>
    <string name="add_patient_name">Name</string>
    <string name="add_patient_history_number">History number</string>
    <string name="add_patient_diagnosis">Diagnosis</string>
    <string name="add_patient_anaesthesia">Anaesthesia</string>
    <string name="add_patient_special_mark">Special mark</string>
    <string name="add_patient_button">Add Patient!</string>
    <string name="activity_main_add_patient_btn">Add Patient</string>
    <string name="activity_main_show_patient_btn">Show Patients</string>
    <string name="activity_main_search_btn">Search</string>
    <string name="activity_main_to_database">Database</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="activiti_correction_save_changes_btn">Save changes</string>
    <string name="activity_correction_date">Date</string>
    <string name="activity_correction_name">Name</string>
    <string name="activity_correction_history">History number</string>
    <string name="activity_correction_diagnosis">Diagnosis</string>
    <string name="activity_correction_anaesthesia">Anaesthesia</string>
    <string name="activity_correction_special">Special note</string>
    <string name="activity_correction_menu_delete">Delete</string>
    <string name="activity_correction_menu_to_main">Main</string>
    <string name="activity_correction_family_name">Family name</string>
    <string name="activity_correction_payment">Payment</string>
    <string name="title_activity_correction">CorrectionActivity</string>
    <string-array name="dropdown_list">
        <item>Family name</item>
        <item>Diagnosis</item>
        <item>Date</item>
        <item>Anaesthesia</item>
    </string-array>
</resources>
